fixed style, it was not loading before. Trying to adjust cell and whitespace width in style

--- a/Pythonidae1/styles/numericalmoocstyle.css
+++ b/Pythonidae1/styles/numericalmoocstyle.css
@@ -15,12 +15,12 @@
 }
 
 div.cell { /* set cell width */
-    width: 750px;
+    width: 1000px;
 }
 
 div #notebook { /* centre the content */
     background: #fff; /* white background for content */
-    width: 1000px;
+    width: 1500px;
     margin: auto;
     padding-left: 0em;
 }
